--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,13 @@
 {
     "manifest_version": 2,
     "name": "知乎外链直达",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "author": "paicha",
     "description": "移除知乎外部链接重定向，加速上网、避免访问追踪。",
     "homepage_url": "https://github.com/paicha/zhihu-undirect",
     "icons": {
+        "16": "/images/icon16.png",
+        "48": "/images/icon48.png",
         "128": "/images/icon128.png"
     },
     "content_scripts": [{
